--- a/src/main/webapp/assets/css/custom.css
+++ b/src/main/webapp/assets/css/custom.css
@@ -4,11 +4,11 @@ html,body{
 	 background-color: #11FFFF;	
 }
 .login{
-	margin-top:160px;
+	margin-top:120px;
 	border:2px solid white;
 	border-radius:12px;
 background-color: white;
-  height: 350px;
+  height: 420px;
   width:500px;
   
 }
@@ -42,6 +42,9 @@ background-color: white;
 	border:2px solid white;
 	border-radius:13px;
 	background-color: white;
+}
+.head-gap{
+	margin-left:20px;
 }
 .left-gap{
 	margin-left:30px;
