--- a/src/main/webapp/assets/css/responsive.css
+++ b/src/main/webapp/assets/css/responsive.css
@@ -1,347 +1,18 @@
 @media (max-width: 1119px)
-
 {
-.side-image{
-	width: 175px;
-	height: 155px;
-}
-.image-border-dg img{
-    height: 380px;
-    width: 380px;	
-}
-.image-border-dg{
-	height: 400px;
-	width: 400px;
-	margin-top: 30px;
-}
-.col-md-4 img{
-	width: 145px;
-	height:65px ;
-}
-.text-dg{
-	font-size:13px;
-}
-.text-dg-about{
-	font-size:13px ;
-}
-.hello-dg{
-	width: 133px;
-	height: 50px;
-	font-size: 13px;
-}
-.jessica-text-dg{
-	font-size: 3em;
-}
-.btn-dg-download{
-	width: 150px;
-	height: 67px;
-	font-size: 1.2em;
-}
-.btn-dg{
-	width: 150px;
-	height: 67px;
-	font-size: 1.2em;
-}
-.navbar-align{
-	width: 1000px;
-}
-.banner{
-	height: 600px;
-}
-.header-main{
-	height: 200px;
-}
-.read-about{
-	height: 850px;
-}
-.img-laptop{
-	width: 100px;
-	height: 600px;
-}
-.col-sm-6 img{
-	width: 500px;
-	height: 580px;
-}
-.read-text-dg{
-	font-size: 1.7em;
-}
-.sed-para-text-dg{
-	margin-top: 35px;
-	margin-bottom: 40px;
-}
-.button-design{
-	width: 300px;
-	height: 89px;
-}
-.arrow-setup img{
-	width: 22px;
-	height: 10px;
-	margin-bottom: 4px;
-}
-.wordpress-icon img{
-	width: 30px;
-	height: 30px;
-}
-.wordpress-icon{
-	width: 60px;
-	height: 60px;
-	margin-bottom: 4px;
-}
-.icon img{
-	width: 30px;
-	height: 30px;
-}
-.button-design-tech{
-	width: 300px;
-	height: 89px;
-}
-.technology{
-	font-size: 16px;
-	margin-bottom: 4px;
-	margin-left: 4px;
-}
-
-.hero-image-border-dg img{
-	width: 350px;
-	height: 350px;
-}
-.hero-image-border-dg{
-	width: 370px;
-	height: 370px;
-}
-.reasons{height: 700px;}
-.reasons-box{
-	margin-top: 88px;
-}
-.heading-service{
-	margin-left: 70px;
-}
-.box{
-	width: 200px;
-	height: 120px;
-}
-.box-text{
-	font-size: 2.7em;
-}
-.small-box-text-client{
-	margin-left: 65px;
-}
-.box-text-text{
-	font-size: 2.7em;
-	margin-left: 73px;
-}
-.small-box-text-awards{
-	margin-left: 63px;
-}
-.box-dg{
-	width: 200px;
-	height: 120px;
-	position: relative;
-}
-.icon-dg{
-	position: absolute;
-	left: 1%;
-}
-.small-box-text-years{
-	margin-left: 30px;
-	font-size: 1.3em;
-}
-.size-of-image img{
-	width: 96%;
-	height: 100%;
-}
-.size-of-image-blog img{
-	width: 97%;
-	height: 100%;
-	margin-left: 2px;
-}
-.form-group input[type=text]{
-	width: 254px;
-	height: 48px;
-}
-.form-group input[type=email]{
-	width: 254px;
-	height: 48px;
-}
-.form-group input[type=number]{
-		width: 254px;
-	height: 48px;
-}
-.budget{
-		width: 254px;
-	height: 48px;
-}
-.text-background{
-			width: 536px;
-	height: 230px;
-}
-.hr-line{
-	margin-top: 80px;
-}
-
+	div.login{
+  font-size:16px;
+  width:550px;
+	height:385px;
+	}
+	div.default-header{
+	
+	}
 }
 
 @media (max-width: 767px)
 {
-	.header-main{height: 120px;}
-	.navbar-main{
-		background-color:#333647 ;
-	}
-	.logo img{
-		width: 180px;
-		height: 80px;
-		margin-left: 10px;
-		margin-top: -80px;
-	}
- .banner{
- 	height: 900px;
- }
- .col-md-7{
- 	margin-left: 150px;
- }
- .image-border-dg{
- 	margin-left: 150px;
- }
- .read-about{
- 	height: 1600px;
- }
 
- .col-sm-6{
- 	margin-top: 150px;
- 	width: 90%;
- }
-
- .services{
- 	height: 1300px;
- }
- .para-align-setup{
- 	text-align: center;
- 	font-size: 11px;
- }
- .col-md-4{
- 	margin-left: 230px;
- }
- .view-all-alignment{
- 	margin-right: 200px;
- }
- .reasons{
- 	height: 1600px;
- }
- .hero-image-border-dg{
- 	margin-left: 200px;
- }
- .read-text-dg{
- 	margin-left: 220px;
- }
- .reasons-para-text-dg{
- 	text-align: center;
- }
- .box{
- 	margin-left: 280px;
- }
- .box-dg{
- 	margin-left: 280px;
- 	margin-top: 60px;
- }
- .portfolio{
- 	height: 3000px;
- }
- .size-of-image{
-margin-left: -50px;
- }
- .size-of-image img{
- 	width: 360px;
- 	height: 390px;
- }
- .overlay{
- 	width: 360px;
- 	height: 390px;
- }
- .overlay-ab{
- 	width: 360px;
- 	height: 390px;
- }
- .col-4{
-margin-top: 30px;
- }
- .view-all-alignment{
- 	margin-left: -27px;
- }
- .heading-service{
- 	text-align: center;
- }
- .para-align-setup-text{
- 	text-align: center;
- 	font-size: 11px;
- }
- .circle-border{
- 	margin-left: 290px;
- }
-
- .quote{
- 	margin-left: 340px;
- }
- .quote-title-text{margin-left: 310px;}
- .ceo-text-dg{margin-left: 320px;}
- .quote-paragraph-dg{font-size: 12px;}
- .blog{
- 	height: 2000px;
- }
- .size-of-image-blog{
- 	margin-left: -90px;
- }
- .size-of-image-blog img{
- 	width: 470px;
- }
- .blog-box{
- 	margin-left: -90px;
- 	width: 473px;
- 	position: relative;
- }
- .icon-dg{
- 		position: absolute;
-	top: 60%;
-  right:77% ;
- }
- .col-6{
- 	margin-top: 50px;
- }
- .contact-us{
- 	height: 1550px;
- }
- .col-7{
- 	margin-left: 8px;
- }
-
- .form-group input[type=text]{
-	width: 100%;
-	height: 55px;
-}
-.form-group input[type=email]{
-	width: 100%;
-	height: 55px;
-	margin-left: -1px;
-	margin-top: 40px;
-}
-.form-group input[type=number]{
-	width: 100%;
-	height: 55px;
-}
-.budget{
-	width: 100%;
-	height: 55px;
-	margin-left: -1px;
-}
-.text-background{
-			width: 100%;
-	height: 230px;
-}
-.hr-line{
-	margin-top: 40px;
-	border: 1px solid #333647;
-	width: 100%;
-	height: 1px;
-}
 }
 
 
@@ -350,241 +21,9 @@ margin-top: 30px;
 
 @media (max-width: 575px){
 	
-.header-main{
-	height: 150px;
-}
-
-.col-md-7{
-	margin-left: 70px;}
-.image-border-dg{
-		margin-left: 70px;
-	}
-.col-sm-6 img{
-	width: 400px;
-	height: 480px;
-}
-.read-about{
-	height: 1500px;
-}
-.side-image{
-	width: 160px;
-}
-.read-text-dg{
-	margin-left: 1px;
-}
- .para-align-setup{
-  	font-size: 10px;
- 	margin-left: -89px;
- }
-  .col-md-4{
- 	margin-left: 130px;
- }
- .view-all-alignment{
- 	margin-left: 70px;
- }
- .hero-image-alignment{
- 	margin-left: -110px;
- }
- .heading-service{
- 	margin-left: 67px;
- }
- .read-text-dg{margin-left: 10px;}
- .box{margin-left:170px ;}
- .box-dg{margin-left:170px ;}
- .para-align-setup-text{
- 	font-size: 11px;
- 	margin-left: -89px;
- }
- .circle-border{margin-left: 200px;}
- .quote{margin-left: 255px;}
- .quote-title-text{margin-left: 225px;}
- .ceo-text-dg{margin-left: 230px;}
- .size-of-image-blog img{
- 	width: 420px;
- 	height: 220px;
- 	margin-left: 30px;
- }
- .blog-box{
- 	width: 420px;
- 	height: 220px;
- 	margin-left:-60px;
- 	position: relative;
- }
- .icon-dg {
-	padding-left: 95px;
-	padding-bottom: 30px;
-	position: absolute;
-	top: 64%;
-  right:70% ;
-}
-.col-7{
-	margin-left: 2px;
-}
 }
 
 @media (max-width: 421px){
-	.header-main{
-		height: 100px;
-	}
-
-	.logo img{
-		width: 100px;
-		height: 50px;
-		margin-left: 10px;
-		margin-top: -70px;
-	}
-	.banner{
-		height: 900px;
-		width: 420px;
-	}
-	.btn-dg-download{
-		margin-left: -12px;
-		width: 130px;
-		height: 70px;
-	}
-	.btn-dg{
-	    width: 130px;
-		height: 70px;
-        margin-left: -30px;
-	}
-	.image-border-dg{
-		margin-left: 40px;
-		width: 320px;
-		height: 320px;
-	}
-	.image-border-dg img{
-		width: 300px;
-		height: 300px;
-	}
-	.col-sm-6 img{
-		width: 330px;
-		height: 380px;
-		margin-left: -40px;
-	}
-	.read-about{
-		height: 1400px;
-	}
-	.side-image{
-		height: 130px;
-		width: 140px;
-	}
-
-	.upper-box{
-		width: 9px;
-		height: 25px;}
-	.year{
-			font-size: 15px;
-		}
-	.read-text-dg{;
-		font-size: 19px;
-	}
-	.sed-para-text-dg{
-		margin-top: 20px;
-		font-size: 12px;
-	}
-	.para-align-setup{
-		font-size: 7px;
-		margin-left: -40px;
-	}
-	.col-md-4{
-		margin-left: 50px;
-	}
-	.hero-image-border-dg{
-		margin-left: 140px;
-		width: 330px;
-		height: 330px;
-	}
-	.hero-image-border-dg img{
-		width: 300px;
-		height: 300px;
-	}
-	.reasons{width: 420px;}
-	.reasons-para-text-dg{
-		font-size: 10px;
-		margin-left: -12px;
-	}
-	.read-text-dg{
-		margin-left: -12px;
-	}
-	.box{
-		margin-left: 100px;
-	}
-	.box-dg{
-		margin-left: 100px;
-	}
-	.portfolio{
-		height: 2500px;
-		width: 420px;
-	}
-	.size-of-image img{
-		width: 270px;
-		height: 300px;
-		margin-left: 60px;
-	}
-	.view-all-alignment{
-		margin-left: 100px;
-	}
-	.overlay{
-		width: 270px;
-		height: 300px;
-		margin-left: 60px;
-	}
-	.overlay-ab{
-		width: 270px;
-		height: 300px;
-		margin-left: 60px;
-	}
-    .testimonials{width: 420px;}
-	.para-align-setup-text{
-		font-size: 7px;
-		margin-left: -65px;
-	}
-	.circle-border{
-       margin-left: 130px;
-	}
-	.quote{
-		margin-left: 190px;
-	}
-	.quote-title-text{
-		margin-left: 165px;
-	}
-	.ceo-text-dg{
-		margin-left: 170px;
-	}
-	.quote-paragraph-dg{
-		font-size: 11px;
-	}
-	.blog{
-		height: 1700px;
-		width: 420px;
-	}
-	.size-of-image-blog img{
-		width: 300px;
-		height: 170px;
-		margin-left: 88px;		
-	}
-	.blog-box{
-		width: 300px;
-		height: 170px;
-		margin-left: -2px;
-		position: relative;	
-	}
-	.icon-dg{
-		position: absolute;
-		top: 84%;
-        left: 1%;
-	}
-	.contact-us{
-		width: 420px;
-	}
-	.submit-alignment{
-		margin-left: 10px;
-	}
-	.hr-line{
-		margin-top: 20px;
-	}
-	.copyright{
-		font-size: 10px;
-	}
+	
 
 }
