--- a/src/main/webapp/assets/css/custom.css
+++ b/src/main/webapp/assets/css/custom.css
@@ -10,7 +10,6 @@ html,body{
 background-color: white;
   height: 360px;
   width:500px;
-  
 }
 .heading{
    font-size:40px;
@@ -26,7 +25,7 @@ background-color: white;
 }
 .header{
    font-size:40px;
-   margin-left:380px;
+   margin-left:450px;
    margin-bottom:30px;
 }
 .Form-Section{
@@ -95,11 +94,11 @@ background-color: white;
   height: 520px;
   width:550px;
 }
-.error, .r-btn-error, .btn-error{
+.error, .r-btn-error, .btn-error, #error{
 	color:red;
 	font-size:10px;
 }
-.default-header{
+div.default-header{
 	background-color: #00DEFF;
 	font-size:25px;
 	height:68px;
@@ -121,4 +120,7 @@ background-color: white;
   width: 100%;
 background-color: #00DEFF;
   text-align: center;
+}
+.buttons{
+	margin-left:550px;
 }
