--- a/src/main/webapp/assets/css/custom.css
+++ b/src/main/webapp/assets/css/custom.css
@@ -4,7 +4,7 @@ html,body{
 	 background-color: #50E5FC;	
 }
 .login{
-	margin-top:120px;
+	margin-top:180px;
 	border:2px solid white;
 	border-radius:12px;
 background-color: white;
@@ -23,13 +23,18 @@ background-color: white;
 	color:white;
 	height:40px;
 }
+.edit-header{
+	 font-size:40px;
+   margin-left:370px;
+   margin-bottom:30px;
+}
 .header{
    font-size:40px;
-   margin-left:450px;
+   margin-left:300px;
    margin-bottom:30px;
 }
 .Form-Section{
-	margin-top:80px;
+	margin-top:122px;
 	border:2px solid white;
 	border-radius:13px;
 	background-color: white;
@@ -87,7 +92,7 @@ background-color: white;
 	left:100%;
 }
 .forgot-section{
-	margin-top:60px;
+	margin-top:130px;
 	border:2px solid white;
 	border-radius:12px;
 background-color: white;
@@ -104,6 +109,10 @@ div.default-header{
 	height:68px;
 	width:100%;
 }
+div.row{
+	margin-right:0px;
+	margin-left:0px;
+}
 .set-data{
 	margin-top:15px;
 }
@@ -111,16 +120,17 @@ div.default-header{
 	margin-left:20px;
 	font-size:29px;
 }
-.footer-position{
+div.footer-position{
 	height:30px;
-  position: relative;
-  left: 0;
-  top:126px;
-  bottom: 0;
   width: 100%;
 background-color: #00DEFF;
   text-align: center;
 }
 .buttons{
 	margin-left:550px;
+}
+.title-name{
+	margin-left:470px;
+	font-size:46px;
+	margin-bottom:60px;
 }
